@@ -1,4 +1,7 @@
 # Generated by h2py from /usr/include/sys/file.h
+from warnings import warnpy3k
+warnpy3k("the FILE module has been removed in Python 3.0", stacklevel=2)
+del warnpy3k
 
 # Included from standards.h
 
